tr.serv.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2022-07-27T05:58:06Z"
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.24.0
  name: traefik
  namespace: kube-system
  resourceVersion: "2947"
  uid: e24c177c-5fd9-41ba-bc6b-189cb6b717c4
spec:
  allocateLoadBalancerNodePorts: true
  externalIPs:
    - 192.168.0.105
  clusterIP: 10.109.3.16
  clusterIPs:
  - 10.109.3.16
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 31196
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 32399
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
