ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  tls:
    - secretName: test-localhost
      hosts:
        - localhost
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
